# fluids-c

./: CMakeLists.txt  Simulation.cpp  Simulation.h  advection.cpp  main.cpp  pressure.cpp  simulation_vis.cpp  utils.cpp  utils.h  visualization.cpp  visualization.h
inscriptive/: .bazelproject
opencl/: optimizations.md  pom.xml
opencl/journal/: Makefile  journal.md  template.tex
opencl/rusty/: Cargo.toml  lanczos.py
opencl/rusty/src/: main.rs  plotter.rs
opencl/rusty/src/distmesh/: distmesh_2d.rs  mesh.rs  mod.rs
opencl/rusty/src/functions/: gamma.rs  jacobi_gauss_quadrature.rs  jacobi_polynomials.rs  legendre_polynomials.rs  mod.rs  range_kutta.rs  vandermonde.rs
opencl/rusty/src/galerkin_1d/: advec.rs  flux.rs  galerkin.rs  grid.rs  maxwell.rs  mod.rs  operators.rs  unknowns.rs
opencl/rusty/src/galerkin_2d/: flux.rs  galerkin.rs  grid.rs  maxwell.rs  mod.rs  operators.rs  reference_element.rs  unknowns.rs
opencl/rusty/src/galerkin_2d/maxwell/: flux.rs  maxwell.rs  mod.rs  unknowns.rs
opencl/rusty/src/grid/: element.rs
opencl/rusty/src/matrices/: matrix_types.rs  mod.rs  vector_ops.rs
opencl/rusty/src/plot/: mod.rs  plot2d.rs  plot3d.rs
opencl/rusty/static/meshes_2d/: ellipse_points  ellipse_triangles  unit_square_points  unit_square_triangles
opencl/src/main/resources/kernels/: count_boundaries.cl  eikonal.cl  serial_prefix_sum.cl  square.cl  test.cl  winding_number.cl
opencl/src/main/resources/shaders/: identity.vtx  sample.frag
opencl/web/: index.html  vis.js
pyfvm/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pyfvm/src/: cell.py
(+77 files in other folders)
