[package]
name = "rusty"
version = "0.1.0"
authors = ["Jack Coughlin <johnbcoughlin@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}

num = "0.1"
rulinalg = "0.4.2"

# See https://github.com/blas-lapack-rs/blas-lapack-rs.github.io/wiki

## Wrappers
blas = "0.20.0"
lapack = "0.16.0"

## Bindings
blas-sys = "0.7.1"
lapack-sys = "0.12.1"

## Sources
blas-src = "0.2.1"
accelerate-src = "0.3.1"

gnuplot = "0.0.26"

tempfile = "3.0.3"

typenum = "1.5.1"
nalgebra = "0.16.0"
generic-array = "0.12.0"
itertools = "0.6.5"

[profile.release]
debug = true